force-app/main/default/objects/Wages__c/Wages__c.object-meta.xml
<CustomObject>
    <label>Wage</label>
    <nameField>
        <displayFormat>Wage-{00000000}</displayFormat>
        <label>Wages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>