force-app/main/default/objects/Wages__c/fields/Bonus_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Bonus_GL_Account__c</fullName>
    <formula>Compensation__r.Bonus_Plan__r.GL_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus GL Account</label>
    <type>Text</type>
</CustomField>