force-app/main/default/objects/Wages__c/fields/Bonus_Per_Wage__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Per_Wage__c</fullName>
    <label>Bonus Per Wage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>