force-app/main/default/objects/Wages__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <referenceTo>Compensation__c</referenceTo>
    <relationshipLabel>Wages</relationshipLabel>
    <relationshipName>Wages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>