force-app/main/default/objects/Wages__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Wages</relationshipLabel>
    <relationshipName>Wages</relationshipName>
    <type>Lookup</type>
</CustomField>