force-app/main/default/objects/Wages__c/fields/Employer_Tax__c.field-meta.xml
<CustomField>
    <fullName>Employer_Tax__c</fullName>
    <label>Employer Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>