force-app/main/default/objects/Wages__c/fields/Employer_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employer_Tax_Amount__c</fullName>
    <formula>IF( Compensation__r.Employee__r.RecordType.DeveloperName == &#39;Sales_Employee&#39;, (Employer_Tax__c) * ( Wage_Amount__c + Bonus_Amount__c ), IF(TEXT(Compensation__r.Employee__r.Employee_Type__c) == &#39;Salaried Employee&#39;, (Employer_Tax__c) * ( Wage_Amount__c + Bonus_Amount__c ),0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>