force-app/main/default/objects/Wages__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <formula>Text(Employee_Number__r.Function__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Function</label>
    <type>Text</type>
</CustomField>