force-app/main/default/objects/Wages__c/fields/Gross_Wage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Wage_Amount__c</fullName>
    <formula>(Wage_Amount__c +  Bonus_Amount__c +  Employer_Tax_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Wage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>