force-app/main/default/objects/Wages__c/fields/Net_Wage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Wage_Amount__c</fullName>
    <formula>Gross_Wage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Wage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>