force-app/main/default/objects/Wages__c/fields/P_L_Date__c.field-meta.xml
<CustomField>
    <fullName>P_L_Date__c</fullName>
    <label>P&amp;L Date</label>
    <type>Date</type>
</CustomField>