force-app/main/default/objects/Wages__c/fields/Primary_Currency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Currency__c</fullName>
    <formula>Employee_Number__r.Primary_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Currency</label>
    <type>Text</type>
</CustomField>