force-app/main/default/objects/Wages__c/fields/Wage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Wage_Amount__c</fullName>
    <label>Wage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>