force-app/main/default/objects/Wages__c/fields/WageCategory__c.field-meta.xml
<CustomField>
    <fullName>WageCategory__c</fullName>
    <formula>Employee_Number__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WageCategory</label>
    <type>Text</type>
</CustomField>