force-app/main/default/objects/Wages__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Employee_Number__c</columns>
    <columns>Function__c</columns>
    <columns>Primary_Currency__c</columns>
    <columns>Cash_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>